{
    "name": "Controls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "54a574e4-ccc5-4a6b-9e7c-c2c0730934ba",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "0f072655-9ec0-42ce-a37d-ae8e4b261488",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootingPrimary",
                    "type": "Button",
                    "id": "c411d85a-cfa9-4300-bb17-95686004a4aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootingSecondary",
                    "type": "Button",
                    "id": "1a851a34-daed-4e10-aa79-80fb4edb3818",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UsingAbilityA",
                    "type": "Button",
                    "id": "7dad6b40-0c28-4db9-adc1-e6126061963f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UsingAbilityB",
                    "type": "Button",
                    "id": "46b28890-7159-4ab0-9916-41eef25c8c37",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b7fbb553-f1fb-4468-b9f9-c5e900d652f2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "ShootingPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "e6a47583-5845-4cc5-a09d-851e7ad2d1c2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3fca0281-11a3-472a-a2c2-f049b1cb69bf",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "73a1f478-0b1b-4834-a173-c90b7bcb396f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d6dce1ba-d2eb-41f8-9475-82d8d0dffba0",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "ShootingSecondary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b67675c6-84e1-4026-981b-ea75fd1a7ef9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "UsingAbilityA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e55bdaac-31e7-4b14-97ca-cb7205afb6da",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "ControlScheme",
                    "action": "UsingAbilityB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "a5925d37-affd-4515-aa48-92702813be37",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "744438dd-14ce-4148-9c1e-65c3ad2a99e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "30ebde8e-f6d6-4bd6-a660-59977830d7ba",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "ControlScheme",
            "bindingGroup": "ControlScheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}